--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup npm and just
         run: |
           sudo apt-get update
-          sudo apt-get install -y npm
+          sudo apt-get install -y npm clojure just
           curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | sudo bash -s -- --to /usr/local/bin
       - name: Setup pages
         id: pages
