--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,14 +18,21 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      - name: Install Just
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | sudo bash -s -- --to /usr/local/bin
       - name: Setup pages
         id: pages
         uses: actions/configure-pages@v4
-      - name: Setup npm and just
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y clojure just
-        # This step specifically loads the dependencies including dev deps
+      - name: Prepare java
+        uses: actions/setup-java@v3
+        with:
+          distribution: "zulu"
+          java-version: "21"
+
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@13.2
+
       - name: Load Clojure dependencies
         run: clojure -A:dev -P # This resolves and downloads all dependencies
 
