--- a/livemol-docs/_quarto.yml
+++ b/livemol-docs/_quarto.yml
@@ -2,12 +2,16 @@ project:
   type: website
 
 website:
-  title: "livemol"
+  title: "livemol-docs"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+    right:
+      - href: https://github.com/zachcp/livemol
+        text: GitHub
+        icon: github
 
 format:
   html:
